fixed left alignment of nav bars, added bottom border, and inserted dropcap

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-    box-sizing: border-box;
     font-family:sans-serif;
 }
 
@@ -41,31 +40,23 @@ header {
     text-align: left;
 }
 
+.main-nav ul{
+    padding-top: 10px;
+    display: flex;
+    list-style-type: none;
+    font-size: 18px;
+    justify-content: space-between;
+    margin-left:auto;
+    padding-left:0;
+}
+
+.main-nav ul li a {
+    color: gray;
+}
+
 img {
     max-width: 100%;
 }
-.main-nav {
-    width: 100%;
-}
-
-.main-nav li {
-    float: left;
-    list-style-type: none;
-    font-size: 18px;
-}
-
-.main-nav li a {
-    display: block;
- /*   padding: 14px 16px;*/
-    border-radius: 6px;
-    text-align: left;
-    color: gray;
-    text-decoration: underline;
-}
-
-li a:hover {
-    background-color: #444;
-  }
 
 main {
     padding-top:1rem;
@@ -75,6 +66,20 @@ main {
     text-align: left;
 }
 
+.has-dropcap:first-letter {
+    float:left;
+    font-size: 5rem;
+    line-height: 0.65;
+    margin:0.1em 0.1em 0.2em 0;
+}
+
+article {
+    margin-bottom: 4rem;
+    padding-bottom:2rem;
+    border-bottom: 1px;
+
+}
+
 footer {
     padding-top:1rem;
     padding-bottom:1rem;
@@ -82,11 +87,19 @@ footer {
     padding-right:2rem;
     text-align:left;
 }
-.footer-nav ul, .footer-nav ul li, .footer-nav ul li a {
-    display: block;
-    color:tomato;
-    float: left;
 
+.footer-nav ul {
+    display: flex;
+    color:tomato;
+    justify-content:space-between;
+    text-decoration:none;
+    margin-left:auto;
+    padding-left:0;
+    list-style-type: none;
+}
+
+.footer-nav ul li a {
+    color:tomato;
 }
 
 .continues {
@@ -97,4 +110,8 @@ footer {
 
 .copyright {
     color: lightgray;
+}
+
+li a:hover {
+    background-color: #555;
 }
